# probabilisticprogramming

./: .gitignore  README.md
R/betadirichlet/: .Rhistory  beta_dirichlet.R  beta_dirichlet.R~
R/binwalk/: binwalk.R
R/functional/: functional.history
R/gaupro/: gauproguide.history
R/gaussian/: gaussian.history  plotly.R
R/interpolation/: interpolation.history
R/machine/: history.R
R/ornstein-uhlenbeck/: ornstein-uhlenbeck.history
R/randomfield/: randomfield.history
R/randomfunctions/: funktionen_als_zufallsvariablen.history
R/randomprocess/: processes.R
R/timeseries/: timeseries.R  ts_shampoo.R
doc/: .gitignore  DeepProbabilisticProgramming.md  agenda_bobkonf_2019.txt  algebraic_effect.md  deep.sh  notionpdf.sh  notions.md  quantum-probabilistic.md  quantum.md  scala-meetup.tex
doc/quantum/: bayes.R  bobkonf2022.md  draft.md  linear.ipynb  quantum-abstractions.md  quantum-computiing-timeline.md  quantum-machine-learning.md  quantum-probabilistic.md  quantumcomputing-timeline.md  statistics-learning.md
doc/r_gauss_process/: prob_gauss-rpubs.html  prob_gauss.Rpres  prob_gauss.html  prob_gauss.md
doc/universal/: Notes_A_Domain_Theory_for_Statistical_Probabilistic_Programming.md  functionalmath.md  probmod.Rmd
hakaru10/: .gitignore  CoSi.hs  Discrete1.hs  FrMo.hs  Main.hs  README.md  ShDs.hs  hakaru10.cabal
haskell/: lf_to_f.hs
julia/: getstart.jl  install.txt  machine.jl  mixgauss.jl  mixgaussunivariat.jl  tut0.jl
julia/functional/: co2.jl  maybe_function.txt  terminal.txt
python/tfp/: coins.py  (+1 more)
scala/: .gitignore  Readme.md  build.sbt
(+34 files in other folders)
