
name:                hakaru10
version: 0.0                     
build-type:          Simple
extra-source-files:  
cabal-version:       >=1.10

executable hakaru10
  main-is:             Main.hs
  other-modules:      FrMo 
  other-extensions:    RankNTypes, NoMonomorphismRestriction, GADTs, DataKinds, KindSignatures, FlexibleInstances, TypeFamilies, BangPatterns, NamedFieldPuns, RecordWildCards, ScopedTypeVariables
  build-depends:       base, containers, mtl, random, transformers
  default-language:    Haskell2010
